Refactor ofp_select() to be more like its posix variant
The ofp_select() behavior before this change differs quite much from its
posix variant. This change will bring it closer while also removing some
duplicate code and adding unit tests.

The ofp_select() now returns immediately if there are file descriptors
that are ready already when calling the function. File descriptor events
now correctly interrupt the timeout handling in the ofp_select() and the
'ofp_fd_set' is modified to include only the file descriptors that are
ready.

To enable unit testing of the refactored functions a custom shared memory
allocator, 'ofp_socket_set_allocator()', is added. This now seems to be a
recurring pattern with some duplicate code (see 'ofp_rt_set_allocator()')
so a common solution should be found.

Signed-off-by: Antero Nousiainen <antero.nousiainen@nokia.com>
Reviewed-by: Sorin Vultureanu <sorin.vultureanu@enea.com>

--- a/test/cunit/Makefile.am
+++ b/test/cunit/Makefile.am
@@ -44,7 +44,8 @@ bin_PROGRAMS = \
 	ofp_test_in_var \
 	ofp_test_tcp_seq \
 	ofp_test_rt_lookup \
-	ofp_test_rt_mtrie_lookup
+	ofp_test_rt_mtrie_lookup \
+	ofp_test_syscalls
 
 TESTS = ${bin_PROGRAMS}
 
