--- a/example/Makefile.am
+++ b/example/Makefile.am
@@ -1,2 +1,2 @@
 SUBDIRS = fpm fpm_burstmode socket classifier webserver webserver2 udpecho \
-       ioctl_test sysctl multicast udp_fwd_socket ofp_netwrap_proc
+       ioctl_test sysctl multicast udp_fwd_socket ofp_netwrap_proc ofp_netwrap_crt
