--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -4,7 +4,7 @@ if OFP_CUNIT_ENABLED
 SUBDIRS += cunit
 endif
 
-AM_CPPFLAGS += -DODP_VERSION=$(ODP_VERSION) -I$(top_srcdir)/include/api
+AM_CPPFLAGS += -I$(top_srcdir)/include/api
 
 LDADD = $(top_builddir)/lib/libofp.la
 
