remove unused variable ODP_VERSION
Signed-off-by: Anders Roxell <anders.roxell@linaro.org>

--- a/example/ofp_netwrap_crt/Makefile.am
+++ b/example/ofp_netwrap_crt/Makefile.am
@@ -1,8 +1,7 @@
 LIB   = $(top_builddir)/lib
 
 AM_CFLAGS =  -I.
-AM_CFLAGS +=  -I$(top_srcdir)/include/api \
-	     -DODP_VERSION=$(ODP_VERSION) 
+AM_CFLAGS +=  -I$(top_srcdir)/include/api
 
 lib_LTLIBRARIES = $(LIB)/libofp_netwrap_crt.la
 
