configure: set cunit_support to no default
./configure outputs:
cunit:

It should say "no" or "yes"

Signed-off-by: Anders Roxell <anders.roxell@linaro.org>
Reviewed-by: Sorin Vultureanu <sorin.vultureanu@enea.com>

--- a/configure.ac
+++ b/configure.ac
@@ -234,6 +234,7 @@ AM_CONDITIONAL([OFP_MTRIE], [test x$use_mtrie = xtrue])
 ##########################################################################
 # Enable/disable Unit tests
 ##########################################################################
+cunit_support=no
 AC_ARG_ENABLE(
 	[cunit],
 	[  --enable-cunit         Enable/disable cunit],
