--- a/configure.ac
+++ b/configure.ac
@@ -65,6 +65,8 @@ AM_CFLAGS="$AM_CFLAGS $PTHREAD_CFLAGS"
 AM_LDFLAGS="$AM_LDFLAGS $PTHREAD_LDFLAGS"
 CC="$PTHREAD_CC"
 
+m4_include([./m4/visibility.m4])
+
 AC_SEARCH_LIBS([timer_create],[rt posix4])
 
 ##########################################################################
