test/cunit/Makefile: fix OOT build
make[4]: Entering directory
'/random-scripts/ofp-packaging/openfastpath-1.0.git232.ga4b9e07/test/cunit'
  CC       ofp_test_debug_pcap.o
ofp_test_debug_pcap.c:26:29: fatal error: test_raw_frames.h: No such
file or directory
 #include "test_raw_frames.h"
                             ^
compilation terminated.

Signed-off-by: Anders Roxell <anders.roxell@linaro.org>
Reviewed-by: Sorin Vultureanu <sorin.vultureanu@enea.com>

--- a/test/cunit/Makefile.am
+++ b/test/cunit/Makefile.am
@@ -47,4 +47,6 @@ bin_PROGRAMS = \
 
 TESTS = ${bin_PROGRAMS}
 
+EXTRA_DIST = cksum_packets.h fragmented_packet.h test_raw_frames.h
+
 CLEANFILES = $(wildcard *.xml) packets.txt testbuf.txt test.pcap
