--- a/Makefile.am
+++ b/Makefile.am
@@ -110,6 +110,7 @@ noinst_HEADERS = \
 		  $(top_srcdir)/include/ofpi_vxlan.h \
 		  $(top_srcdir)/include/ofpi_hook.h \
 		  $(top_srcdir)/include/ofpi_util.h \
-		  $(top_srcdir)/include/ofpi_tcp_shm.h
+		  $(top_srcdir)/include/ofpi_tcp_shm.h \
+		  $(top_srcdir)/include/ofpi_epoll.h
 
 EXTRA_DIST = bootstrap .scmversion
