--- a/test/cunit/Makefile.am
+++ b/test/cunit/Makefile.am
@@ -44,7 +44,8 @@ bin_PROGRAMS = \
 	ofp_test_rt_lookup \
 	ofp_test_rt_mtrie_lookup \
 	ofp_test_syscalls \
-	ofp_test_epoll
+	ofp_test_epoll \
+	ofp_test_icmp
 
 TESTS = ${bin_PROGRAMS}
 
