Refactor ofp_icmp_input and add unit tests
Refactor the production code to make it unit testable and add unit tests
to cover 'ofp_icmp_input' function. Valgrind was used during test
creation to verify no leaks are possible.

Signed-off-by: Antero Nousiainen <antero.nousiainen@nokia.com>
Reviewed-by: Sorin Vultureanu <sorin.vultureanu@enea.com>
(cherry picked from commit 38576e3aa4855dcf5e6fd63657e68452dde8543d)
Signed-off-by: Jere Leppänen <jere.leppanen@nokia.com>

--- a/test/cunit/Makefile.am
+++ b/test/cunit/Makefile.am
@@ -43,7 +43,8 @@ bin_PROGRAMS = \
 	ofp_test_tcp_seq \
 	ofp_test_rt_lookup \
 	ofp_test_rt_mtrie_lookup \
-	ofp_test_syscalls
+	ofp_test_syscalls \
+	ofp_test_icmp
 
 TESTS = ${bin_PROGRAMS}
 
