--- a/test/cunit/Makefile.am
+++ b/test/cunit/Makefile.am
@@ -42,9 +42,12 @@ bin_PROGRAMS = \
 	ofp_test_in_var \
 	ofp_test_tcp_seq \
 	ofp_test_rt_lookup \
-	ofp_test_rt_mtrie_lookup \
 	ofp_test_syscalls \
 	ofp_test_icmp
+
+if OFP_MTRIE
+bin_PROGRAMS += ofp_test_rt_mtrie_lookup
+endif
 
 TESTS = ${bin_PROGRAMS}
 
