--- a/example/ofp_vs/ofp.conf
+++ b/example/ofp_vs/ofp.conf
@@ -1,12 +1,13 @@
-debug 0x0
-#debug capture 0x0
+debug 0xf
+debug capture 0xf
 loglevel set debug
-#ifconfig fp0 192.168.40.1/24
-ifconfig fp0 192.168.1.112/24
-ifconfig fp1 192.168.220.1/24
-#route add 192.168.1.0/24 gw 192.168.40.2 dev fp0
-#route add 0.0.0.0/0 gw 192.168.40.2 dev fp0
+ifconfig fp0 192.168.50.253/24
+#Fix me: default gw has no effect
+#route add 0.0.0.0/0 gw 192.168.50.1 dev fp0
+route add 192.168.0.0/16 gw 192.168.50.1 dev fp0
 fdir flush fp0
-fdir add fp0 proto ipv4 src_ipv4 0.0.0.0 src_port 0 dst_ipv4 192.168.210.100 dst_port 0 queue_id 0
-fdir add fp0 proto ipv4 src_ipv4 0.0.0.0 src_port 0 dst_ipv4 192.168.210.101 dst_port 0 queue_id 1
+fdir add fp0 proto ipv4-other src_ipv4 0.0.0.0 src_port 0 dst_ipv4 192.168.210.100 dst_port 0 queue_id 0
+fdir add fp0 proto ipv4-other src_ipv4 0.0.0.0 src_port 0 dst_ipv4 192.168.210.101 dst_port 0 queue_id 1
+fdir add fp0 proto ipv4-other src_ipv4 0.0.0.0 src_port 0 dst_ipv4 192.168.210.102 dst_port 0 queue_id 0
+fdir add fp0 proto ipv4-other src_ipv4 0.0.0.0 src_port 0 dst_ipv4 192.168.210.103 dst_port 0 queue_id 1
 fdir show fp0
