add snat rule delete and show command

--- a/example/ofp_vs/ofp.conf
+++ b/example/ofp_vs/ofp.conf
@@ -10,3 +10,5 @@ fdir add fp0 proto ipv4-other src_ipv4 0.0.0.0 src_port 0 dst_ipv4 192.168.210.1
 fdir add fp0 proto ipv4-other src_ipv4 0.0.0.0 src_port 0 dst_ipv4 192.168.210.102 dst_port 0 queue_id 0
 fdir add fp0 proto ipv4-other src_ipv4 0.0.0.0 src_port 0 dst_ipv4 192.168.210.103 dst_port 0 queue_id 1
 fdir show fp0
+snat enable
+snat add from 192.168.0.0/16 to 0.0.0.0/0 out_dev fp0 source 192.168.50.253 - 192.168.50.253 algo sdh
