--- a/example/ofp_vs/ofp.conf
+++ b/example/ofp_vs/ofp.conf
@@ -1,6 +1,7 @@
 debug 0x0
 loglevel set debug
 ifconfig fp0 192.168.50.253/24
+ifconfig fp1 10.1.0.1/24
 #Fix me: default gw has no effect
 #route add 0.0.0.0/0 gw 192.168.50.1 dev fp0
 route add 192.168.0.0/16 gw 192.168.50.1 dev fp0
@@ -11,4 +12,4 @@ fdir add fp0 proto ipv4-other src_ipv4 0.0.0.0 src_port 0 dst_ipv4 192.168.210.1
 fdir add fp0 proto ipv4-other src_ipv4 0.0.0.0 src_port 0 dst_ipv4 192.168.210.103 dst_port 0 queue_id 1
 fdir show fp0
 snat enable
-snat add from 192.168.0.0/16 to 0.0.0.0/0 out_dev fp0 source 192.168.50.253 - 192.168.50.253 algo sdh
+snat add from 10.1.0.0/16 to 0.0.0.0/0 out_dev fp0 source 192.168.50.253 - 192.168.50.253 algo sdh
