snat support fdir

--- a/example/ofp_vs/ofp.conf
+++ b/example/ofp_vs/ofp.conf
@@ -2,14 +2,24 @@ debug 0x0
 loglevel set debug
 ifconfig fp0 192.168.50.253/24
 ifconfig fp1 10.1.0.1/24
-#Fix me: default gw has no effect
+#Fix me: default gw didn't work
 #route add 0.0.0.0/0 gw 192.168.50.1 dev fp0
 route add 192.168.0.0/16 gw 192.168.50.1 dev fp0
+fdir flush fp1
+#fullnat local address flow director on fp1
+fdir add fp1 proto ipv4-other src_ipv4 0.0.0.0 src_port 0 dst_ipv4 192.168.210.100 dst_port 0 queue_id 0
+fdir add fp1 proto ipv4-other src_ipv4 0.0.0.0 src_port 0 dst_ipv4 192.168.210.101 dst_port 0 queue_id 1
+fdir add fp1 proto ipv4-other src_ipv4 0.0.0.0 src_port 0 dst_ipv4 192.168.210.102 dst_port 0 queue_id 2
+fdir add fp1 proto ipv4-other src_ipv4 0.0.0.0 src_port 0 dst_ipv4 192.168.210.103 dst_port 0 queue_id 3
+fdir show fp1
+#snat gateway flow director on fp0
 fdir flush fp0
-fdir add fp0 proto ipv4-other src_ipv4 0.0.0.0 src_port 0 dst_ipv4 192.168.210.100 dst_port 0 queue_id 0
-fdir add fp0 proto ipv4-other src_ipv4 0.0.0.0 src_port 0 dst_ipv4 192.168.210.101 dst_port 0 queue_id 1
-fdir add fp0 proto ipv4-other src_ipv4 0.0.0.0 src_port 0 dst_ipv4 192.168.210.102 dst_port 0 queue_id 0
-fdir add fp0 proto ipv4-other src_ipv4 0.0.0.0 src_port 0 dst_ipv4 192.168.210.103 dst_port 0 queue_id 1
+fdir add fp0 proto ipv4-tcp src_ipv4 0.0.0.0 src_port 0 dst_ipv4 0.0.0.0 dst_port 0 queue_id 0
+fdir add fp0 proto ipv4-tcp src_ipv4 0.0.0.0 src_port 0 dst_ipv4 0.0.0.0 dst_port 1 queue_id 1
+fdir add fp0 proto ipv4-tcp src_ipv4 0.0.0.0 src_port 0 dst_ipv4 0.0.0.0 dst_port 2 queue_id 2
+fdir add fp0 proto ipv4-tcp src_ipv4 0.0.0.0 src_port 0 dst_ipv4 0.0.0.0 dst_port 3 queue_id 3
 fdir show fp0
+#configure snat
 snat enable
 snat add from 10.1.0.0/16 to 0.0.0.0/0 out_dev fp0 source 192.168.50.253 - 192.168.50.253 algo sdh
+snat add from 10.1.0.10/32 to 0.0.0.0/0 out_dev fp0 source 192.168.50.100 - 192.168.50.103 algo sdh
