--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -9,6 +9,8 @@ AM_CPPFLAGS += -I$(top_srcdir)/include/api
 LDADD = $(top_builddir)/lib/libofp.la
 
 bin_PROGRAMS = cpp_test redefinitions_posix_test
+cpp_test_LDFLAGS = $(AM_LDFLAGS) -static
+redefinitions_posix_test_LDFLAGS = $(AM_LDFLAGS) -static
 
 TESTS = ${bin_PROGRAMS}
 
