example/socket: Inherit AM_CFLAGS from top-level.
Since we set CFLAGS in this subdirectory, we need to explicitly
include AM_CFLAGS from top-level, otherwise they will be omitted.

Signed-off-by: Jere Leppänen <jere.leppanen@nokia.com>
Reviewed-by: Sorin Vultureanu <sorin.vultureanu@enea.com>

--- a/example/socket/Makefile.am
+++ b/example/socket/Makefile.am
@@ -33,5 +33,5 @@ noinst_HEADERS = \
 		${srcdir}/suite_framework.h \
 		${srcdir}/socket_send_recv_tcp.h
 if OFP_IPv6
-socket_CFLAGS =  -DINET6
+socket_CFLAGS = $(AM_CFLAGS) -DINET6
 endif
