Fix compilation with glibc < 2.19.
Commit 33ec74b broke compilation with glibc versions earlier than
2.19, which introduced the _DEFAULT_SOURCE feature macro. Other
feature macros are needed for compilation with old glibc versions,
most notably in CentOS 7.

Fixes: 33ec74b Set the language standard to C99.
Fixes: #153 unknown type name 'fd_set'

Signed-off-by: Jere Leppänen <jere.leppanen@nokia.com>
Reviewed-by: Brian Brooks <brian.brooks@linaro.org>

--- a/configure.ac
+++ b/configure.ac
@@ -75,7 +75,7 @@ OFP_CFLAGS="$OFP_CFLAGS -Wmissing-declarations -Wold-style-definition -Wpointer-
 OFP_CFLAGS="$OFP_CFLAGS -Wcast-align -Wnested-externs -Wcast-qual -Wformat-nonliteral"
 OFP_CFLAGS="$OFP_CFLAGS -Wformat-security -Wundef -Wwrite-strings"
 ## OFP_CFLAGS="$OFP_CFLAGS -Werror"
-OFP_CFLAGS="$OFP_CFLAGS -std=c99 -D_DEFAULT_SOURCE"
+OFP_CFLAGS="$OFP_CFLAGS -std=c99 -D_DEFAULT_SOURCE -D_POSIX_SOURCE=1 -D_POSIX_C_SOURCE=200809L -D_BSD_SOURCE"
 
 OFP_CXXFLAGS="-std=c++11 $OFP_CXXFLAGS"
 OFP_CXXFLAGS="-fno-strict-aliasing $OFP_CXXFLAGS"
