--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: c
 
 dist: trusty
-sudo: false
+sudo: required
 
 install:
     - curl -sSL https://github.com/Linaro/libcunit/releases/download/2.1-3/CUnit-2.1-3.tar.bz2 | tar jx
