--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ language: c
 dist: trusty
 sudo: required
 
+addons:
+    apt:
+        packages:
+            - libconfig-dev
+
 install:
     - curl -sSL https://github.com/Linaro/libcunit/releases/download/2.1-3/CUnit-2.1-3.tar.bz2 | tar jx
     - cd CUnit-2.1-3
