Fix compilation of OFP with libck
This commit primarily fixes compilation issues of ARP libck
implemention. Making ofp_arp_ck.c compatible to the new libck
API.(Version: 0.5.2)

Adding ck_epoch_section_t data structure needed for changed APIs
like ck_epoch_begin, ck_epoch_end etc.

In order to comply with cunit test cases. Aging and saving pkt
test cases have been ignored for libck configuration, as the
implementation is incomplete in these aspects.

Signed-off-by: Sirshak Das <sirshak.das@arm.com>
Reviewed-by: Sorin Vultureanu <sorin.vultureanu@enea.com>
Reviewed-by: Brian Brooks <brian.brooks@arm.com>
Reviewed-by: Honnappa Nagarahalli <honnappa.nagarahalli@arm.com>

--- a/test/cunit/Makefile.am
+++ b/test/cunit/Makefile.am
@@ -18,6 +18,10 @@ if OFP_USE_LIBCONFIG
 AM_CFLAGS +=  -DOFP_USE_LIBCONFIG
 endif
 
+if OFP_USE_LIBCK
+AM_CFLAGS +=  -DOFP_USE_LIBCK
+endif
+
 AM_CPPFLAGS += -I$(top_srcdir)/include -I$(top_srcdir)/include/api
 AM_LDFLAGS += -L$(top_builddir)/lib
 
