test: Implement IPv4 forwarding benchmark.
A simple IPv4 forwarding packet throughput measurement using an
internally generated batch of packets. Parameters include number of
workers, routes and neighbors. Reports packets per second.

Signed-off-by: Jere Leppänen <jere.leppanen@nokia.com>
Reviewed-by: Sorin Vultureanu <sorin.vultureanu@enea.com>

--- a/configure.ac
+++ b/configure.ac
@@ -116,6 +116,7 @@ AC_CONFIG_FILES([
 	scripts/Makefile
 	test/Makefile
 	test/cunit/Makefile
+	test/benchmark/Makefile
 	])
 
 AC_ARG_ENABLE([lto],
