Make CLI optional via configure
This commit adds a compile time configure option

--enable-cli         Enable/disable use of ofp cli

This is enabled by default.

--enable-cli=no

Disables ofp cli and does not compile files under ofp/src/cli
folder. It also compiles out the code for starting cli thread
in all the examples.

Signed-off-by: Sirshak Das <sirshak.das@arm.com>
Reviewed-by: Brian Brooks <brian.brooks@arm.com>
Reviewed-by: Honnappa Nagarahalli <honnappa.nagarahalli@arm.com>
Reviewed-by: Jianbo Liu <jianbo.liu@arm.com>
Reviewed-by: Jere Leppänen <jere.leppanen@nokia.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -23,14 +23,6 @@ ofp_log.c \
 ofp_debug.c \
 ofp_debug_pcap.c \
 ofp_debug_print.c \
-cli/ofp_cli_route.c \
-cli/ofp_cli_debug.c \
-cli/ofp_cli_log.c \
-cli/ofp_cli_arp.c \
-cli/ofp_cli_alias.c \
-cli/ofp_cli_stat.c \
-cli/ofp_cli_ifconfig.c \
-cli/ofp_cli_sysctl.c \
 cli/ofp_cli.c \
 ofp_hash.c \
 ofp_icmp.c \
@@ -113,4 +105,17 @@ ofp_rt_mtrie_lookup.c
 else
 __LIB__libofp_la_SOURCES += \
 ofp_rt_lookup.c
+endif
+
+if OFP_CLI
+
+__LIB__libofp_la_SOURCES += \
+cli/ofp_cli_route.c \
+cli/ofp_cli_debug.c \
+cli/ofp_cli_log.c \
+cli/ofp_cli_arp.c \
+cli/ofp_cli_alias.c \
+cli/ofp_cli_stat.c \
+cli/ofp_cli_ifconfig.c \
+cli/ofp_cli_sysctl.c
 endif
