--- a/configure.ac
+++ b/configure.ac
@@ -172,7 +172,6 @@ OLD_CPPFLAGS=$CPPFLAGS
 LDFLAGS="$AM_LDFLAGS $LDFLAGS"
 CPPFLAGS="$AM_CPPFLAGS $CPPFLAGS"
 
-ODP_VERSION_SUPPORTED="1.11.0.0_monarch"
 function check_odp {
 	 AC_CHECK_LIB($ODP_LIB, odp_packet_alloc, [],
 	     [AC_MSG_FAILURE(["OpenDataPlane library ($ODP_LIB) not available"])],[-lrt -lpthread -lcrypto])
@@ -180,7 +179,7 @@ function check_odp {
 	     [AC_MSG_FAILURE(["Can't find ODP headers"])])
 }
 
-PKG_CHECK_MODULES([ODP], [lib$ODP_LIB >= $ODP_VERSION_SUPPORTED], [], check_odp)
+PKG_CHECK_MODULES([ODP], [lib$ODP_LIB >= 1.17.0.0], [], check_odp)
 AC_SUBST([ODP_CFLAGS])
 AC_SUBST([ODP_LIBS])
 
