Add ofp_brlock that is optimized for frequent reading.
ofp_brlock is a big reader lock style read-write lock that avoids cache
line sharing between readers by having a separate spinlock for each thread.
Read locking is fast. Write locking is slow because all the thread specific
spinlocks have to be acquired.

Signed-off-by: Janne Peltonen <janne.peltonen@nokia.com>
Signed-off-by: Jere Leppänen <jere.leppanen@nokia.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -112,6 +112,7 @@ noinst_HEADERS = \
 		  $(top_srcdir)/include/ofpi_hook.h \
 		  $(top_srcdir)/include/ofpi_util.h \
 		  $(top_srcdir)/include/ofpi_tcp_shm.h \
-		  $(top_srcdir)/include/ofpi_epoll.h
+		  $(top_srcdir)/include/ofpi_epoll.h \
+		  $(top_srcdir)/include/ofpi_brlock.h
 
 EXTRA_DIST = bootstrap .scmversion
