--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -122,5 +122,6 @@ cli/ofp_cli_stat.c \
 cli/ofp_cli_ifconfig.c \
 cli/ofp_cli_address.c \
 cli/ofp_cli_sysctl.c \
-cli/ofp_cli_ipsec.c
+cli/ofp_cli_ipsec.c \
+cli/ofp_cli_netstat.c
 endif
